gitlab_repo/route-tables/main.tf
# public route table
resource "aws_route_table" "public" {
  vpc_id = var.vpc_id
  tags   = {
    Name = "public-route-table"
  }
}

# Private Route Table
resource "aws_route_table" "private" {
  vpc_id = var.vpc_id
  tags   = {
    Name = "private-route-table"
  }
}

# Route to Internet Gateway in public RT
resource "aws_route" "public_igw" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  #gateway_id = var.igw_id
  gateway_id = aws_internet_gateway.igw.id
}

# Route to NAT Gateway in private RT
resource "aws_route" "private_nat_gateway" {
  route_table_id = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  #nat_gateway_id = var.nat_gateway_id
  nat_gateway_id           = aws_nat_gateway.natgw[count.index].id
}

# Public Route Table ssociation with Public Subnet
resource "aws_route_table_association" "public_association" {
  subnet_id      = var.public_subnet_id
  route_table_id = aws_route_table.public.id
}

# Associate Private Route Table with Private Subnet
resource "aws_route_table_association" "private_association" {
  subnet_id      = var.private_subnet_id
  route_table_id = aws_route_table.private.id
}
